--- a/src/app/account/login/login.component.html
+++ b/src/app/account/login/login.component.html
@@ -1,1 +1,34 @@
-<p>login works!</p>
+<section class="page-content-container bg-light">
+<app-header></app-header>
+
+    <div class="page-content-selection">
+        <!-- Login form section-->
+        <form>
+            <div class="form-sections-headings">
+                Sign-In
+            </div>
+            <div class="form-first-column">
+
+                <div class="form-group">
+                    <!-- #username allows angular to bind form-controls change status to ngModel -->
+                    <input type="text" formControlName="username"
+                        class="form-control form-control-sm form-control-textbox" placeholder="Email address">    
+                </div>
+
+                <div class="form-group">
+                    <!-- #password allows angular to binda the form-control to ngModel -->
+                    <input type="password" formControlName="password" class="form-control form-control-sm"
+                        placeholder="Password">
+                </div>
+
+                <div class="form-group">
+                    <!-- keeps the button inactive untill when the for is valid -->
+                    <input type="submit" value="Submit" class="btn btn-sm submit-button">
+                    <a class="nav-link form-nav-link" [routerLinkActive]="['active']" routerLink="/account/registration">Register</a>
+                    <a class="nav-link form-nav-link" [routerLinkActive]="['active']" routerLink="/">Home</a>
+
+                </div>
+            </div>
+        </form>
+    </div>
+</section>
