--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -1,21 +1,16 @@
 
-<section class="page-content-container bg-light">
+<section class="page-content-container">
 <app-header></app-header>
     <div class="page-content-selection">
         <!-- Login form section-->
         <form>
-            <div class="form-sections-headings">
-                (Profile)
+            <div class="form-heading-section">
+                (Guest)
             </div>
-            <div class="form-first-column">
-
-                <div class="form-group">
-                    <!-- keeps the button inactive untill when the for is valid -->
-                    <input type="submit" value="View profile"  (click)="redirectToUserProfile()" class="btn btn-sm submit-button">
-                    <input type="button" value="Sign In" (click)="redirectToSignin()" class="btn btn-sm form-nav-link">
-                    <input type="button" value="Register" (click)="redirectToRegistration()" class="btn btn-sm form-nav-link">
-
-                </div>
+          
+            <div class="form-group">
+                <input type="button" value="Sign In" (click)="redirectToSignin()" class="btn btn-sm submit-button">
+                <input type="button" value="Register" (click)="redirectToRegistration()" class="btn btn-sm form-clear-btn">
             </div>
         </form>
     </div>
