--- a/src/styles.css
+++ b/src/styles.css
@@ -23,6 +23,11 @@ body {
     margin: 0px 0 15px 0;
     padding: 15px 0px 50px 0px;
     border-radius: 15px;
+
+    /* background-image: url('^assets/img/b.png');
+    background-size: cover;
+    background-repeat: no-repeat; */
+
     background-color: rgba(248, 249, 250, 0.8);
 }
 
