Functionalities and Documentation

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,1 +1,3 @@
-<p>header works!</p>
+<div class="page-content-selection">
+    <img class="img-fluid profile-image" (click)="redirectToUserProfile()" src="../assets/profile-img.png" title="View Profile">
+</div>
