--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,3 @@
-<!-- <app-header></app-header> -->
-<router-outlet></router-outlet>
-<div class="signature">
-    <div>User Profile &copy; {{year}}4 All rights reserved</div>
-    <div>Developed by Yingisani</div>
-</div>
 
+<router-outlet></router-outlet>
+<app-footer></app-footer>
