--- a/src/styles.css
+++ b/src/styles.css
@@ -1,17 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body {
-    height: 100%;
+    height: 100%;    
 }
 
 body {
     font-family: Roboto, "Helvetica Neue", sans-serif;
     color: grey;
-    text-align: center;
+    text-align: center;  
 
     background-image: url('^assets/wp/1.jpg');
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
+    background-size: cover;
+    object-fit: contain;
+    background-repeat: repeat;
 }
 
 .container {
@@ -20,22 +21,15 @@ body {
 }
 
 .page-content-container {
-    margin: 0px 0 15px 0;
-    padding: 15px 0px 50px 0px;
+    margin: 60px 15px 20px 15px;
+    padding: 15px 0px 15px 0px;
     border-radius: 15px;
-
-    /* background-image: url('^assets/img/b.png');
-    background-size: cover;
-    background-repeat: no-repeat; */
-
     background-color: rgba(248, 249, 250, 0.8);
 }
 
 /* page content sections */
-.page-content-selection {
-    
-    margin: 5px 0px 5px 0px;
-    
+.page-content-selection {  
+    margin: 5px 0px 5px 0px;   
 }
 
 /* Profile image */
@@ -48,9 +42,9 @@ form {
     margin: 60px 20px 60px 20px ;
     margin: auto;
     max-width: 280px;
-    padding: 15px;
-    border-radius: 6px;
-    background-color: rgba(248, 249, 250, 1);
+    padding: 25px;
+    border-radius: 10px;
+    background-color: rgba(248, 249, 250, 0.9);
  }
 
 .form-heading-section {
@@ -80,19 +74,26 @@ form.form-control.ng-touched.ng-invalid {
     color: lightgrey;
 }
 
-.form-control-icon {
+/* .form-control-icon {
     float: right;
     margin-right: 17px;
     margin-top: -34px;
     position: relative;
     z-index: 2;
     color: lightgrey;
-}
+} */
 
 form .form-validation-error-message {
     color: red;
     font-size: 11px;
     text-align: left;
+}
+
+form .form-main-validation-error-message {
+    color: red;
+    font-size: 11px;
+    text-align: left;
+    /* text-align: center; */
 }
 
 form .submit-button {
@@ -115,7 +116,7 @@ form .form-clear-btn {
     width: 100%;
     padding: 4px 0px 4px 0px;
     margin-top: 8px;
-    color: lightgrey;
+    color: grey;
     border-radius: 3px;
 }
 
