--- a/src/styles.css
+++ b/src/styles.css
@@ -27,6 +27,13 @@ body {
     background-color: rgba(248, 249, 250, 0.8);
 }
 
+.error-message-container {
+    margin: 20px 30px 20px 30px;
+    padding: 15px 15px 15px 15px;
+    border-radius: 15px;
+    background-color: rgba(248, 249, 250, 0.8);
+}
+
 /* page content sections */
 .page-content-selection {  
     margin: 5px 0px 5px 0px;   
@@ -153,8 +160,8 @@ form .form-clear-btn:hover {
 }
 
 .chart-container {
-    margin: 10px 0px 0px 0px;
-    height: 20px;
+    margin: 20px 0px 0px 0px;
+
 }
 
 
